<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#343434"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <!-- the main display -->
    <EditText
        android:textColor="#f47920"
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200sp"
        android:hint="ID"
        android:gravity="center"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one_button"/>

        <Button
            android:id="@+id/two_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two_button"/>

        <Button
            android:id="@+id/three_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four_button"/>

        <Button
            android:id="@+id/five_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five_button"/>

        <Button
            android:id="@+id/six_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/six_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seven_button"/>

        <Button
            android:id="@+id/eight_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eight_button"/>

        <Button
            android:id="@+id/nine_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nine_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backspace_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/backspace_button"/>

        <Button
            android:id="@+id/zero_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero_button"/>
        <Button
            android:id="@+id/enter_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter_button"/>
    </LinearLayout>


</LinearLayout>